src/test/ui/argument-suggestions/issue-99482.stderr
error[E0057]: this function takes 2 arguments but 1 argument was supplied
  --> $DIR/issue-99482.rs:3:14
   |
LL |     let _f = f(main);
   |              ^ ---- an argument of type `()` is missing
   |
note: closure defined here
  --> $DIR/issue-99482.rs:2:13
   |
LL |     let f = |_: (), f: fn()| f;
   |             ^^^^^^^^^^^^^^^^
help: provide the argument
   |
LL |     let _f = f((), main);
   |               ~~~~~~~~~~

error: aborting due to previous error

For more information about this error, try `rustc --explain E0057`.
